# umux

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/gpui-smoke/: Cargo.toml
apps/gpui-smoke/src/: main.rs
apps/umux/: Cargo.toml
apps/umux-cli/: Cargo.toml
apps/umux-cli/src/: main.rs
apps/umux/src/: main.rs
crates/umux-app/: Cargo.toml
crates/umux-app/src/: action.rs  controller.rs  lib.rs  session_store.rs  terminal_registry.rs
crates/umux-browser/: Cargo.toml
crates/umux-browser/src/: automation.rs  lib.rs
crates/umux-cli/: Cargo.toml
crates/umux-cli/src/: args.rs  lib.rs
crates/umux-config/: Cargo.toml
crates/umux-config/src/: lib.rs  paths.rs  shortcuts.rs
crates/umux-core/: Cargo.toml
crates/umux-core/src/: commands.rs  events.rs  ids.rs  lib.rs  model.rs
crates/umux-core/tests/: foundation_flow.rs
crates/umux-ipc/: Cargo.toml
crates/umux-ipc/src/: lib.rs  protocol.rs
crates/umux-ipc/tests/: request_flow.rs
crates/umux-notify/: Cargo.toml
crates/umux-notify/src/: lib.rs  notification.rs  osc.rs
crates/umux-session/: Cargo.toml
crates/umux-session/src/: lib.rs  snapshot.rs
crates/umux-terminal/: Cargo.toml
crates/umux-terminal/src/: appearance.rs  clipboard.rs  control.rs  emulator.rs  engine.rs  events.rs  input.rs  lib.rs  live.rs  pty.rs  session.rs  shell.rs  snapshot.rs  startup_env.rs
crates/umux-terminal/tests/: conpty_component.rs
crates/umux-ui/: Cargo.toml
crates/umux-ui-kit/: Cargo.toml
crates/umux-ui-kit/src/: button.rs  icon_button.rs  keybinding.rs  lib.rs  tab.rs  theme.rs
crates/umux-ui/legacy-floem/: README.md  shell.rs  terminal_canvas.rs
crates/umux-ui/src/: actions.rs  diagnostics.rs  lib.rs  runtime.rs  shell.rs  startup.rs  terminal_view.rs  theme.rs  view_model.rs  workspace.rs
crates/umux-ui/src/shell/: mod.rs  pane_group.rs  surface_tabs.rs  top_bar.rs  unsupported_surface.rs  workspace_rail.rs
crates/umux-ui/src/terminal/: bridge.rs  draw_frame.rs  mod.rs  terminal_element.rs  terminal_surface.rs
crates/umux-win32/: Cargo.toml
crates/umux-win32/src/: lib.rs
docs/superpowers/specs/: 2026-05-16-release-hardening-design.md  2026-05-16-terminal-renderer-repair-design.md  2026-05-17-gpui-zed-terminal-redesign-design.md  2026-05-18-ci-test-suite-design.md  2026-05-18-zed-inspired-ui-polish-design.md
scripts/: vendor_gpui_closure.ps1
