[workspace]
resolver = "3"
members = [
    "crates/umux-browser",
    "crates/umux-cli",
    "crates/umux-config",
    "crates/umux-core",
    "crates/umux-ipc",
    "crates/umux-notify",
    "crates/umux-session",
    "crates/umux-terminal",
    "crates/umux-ui",
    "crates/umux-win32",
    "apps/umux",
    "apps/umux-cli",
]

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
rust-version = "1.95"

[workspace.dependencies]
alacritty_terminal = "0.26.0"
anyhow = "1.0"
camino = "1.2"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
floem = "0.2.0"
interprocess = "2.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
webview2-com = "0.39.1"
windows = "0.62.2"
