[package]
name = "umux-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
camino.workspace = true
serde.workspace = true
thiserror.workspace = true
umux-config = { path = "../umux-config" }
umux-core = { path = "../umux-core" }
umux-session = { path = "../umux-session" }
umux-terminal = { path = "../umux-terminal" }
