[package]
name = "umux-terminal"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
alacritty_terminal.workspace = true
crossbeam-channel.workspace = true
serde.workspace = true
thiserror.workspace = true
umux-notify = { path = "../umux-notify" }
