[package]
name = "umux-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
crossbeam-channel.workspace = true
floem.workspace = true
floem_renderer.workspace = true
umux-app = { path = "../umux-app" }
umux-core = { path = "../umux-core" }
umux-terminal = { path = "../umux-terminal" }
