[package]
name = "umux-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
camino.workspace = true
crossbeam-channel.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
umux-app = { path = "../umux-app" }
umux-config = { path = "../umux-config" }
umux-core = { path = "../umux-core" }
umux-terminal = { path = "../umux-terminal" }
umux-ui-kit = { path = "../umux-ui-kit" }
